modified code to use mapbox

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /node_modules
 npm-debug.log
 yarn-error.log
+environment.ts
+environment.prod.ts
 
 # IDEs and editors
 .idea/
@@ -36,6 +38,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/src/environments
 
 # System files
 .DS_Store
