--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^18.2.7",
     "angular-cli-ghpages": "^2.0.3",
     "express": "^4.18.2",
+    "mapbox-gl": "^3.8.0",
     "ol": "^10.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
