--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "angular-cli-ghpages": "^2.0.3",
     "express": "^4.18.2",
     "mapbox-gl": "^3.8.0",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
