--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -54,8 +55,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "5kB",
+                  "maximumError": "10kB"
                 }
               ],
               "outputHashing": "all",
@@ -104,9 +105,7 @@
               }
             ],
             "styles": [
-              "src/styles.css",
-              "https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.css",
-              "https://api.mapbox.com/mapbox-gl-geocoder/v4.10.0/mapbox-gl-geocoder.css"
+              "src/styles.css"
             ],
             "scripts": []
           }
